--- a/section 3/blackjackGame/index.html
+++ b/section 3/blackjackGame/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     <h1>BlackJack</h1>
+    <p id="message-el">Want to play around?</p>
+    <p id="cards-el">Cards:</p>
+    <p id="sum-el">Sum: </p>
+    <div class="btn-container">
+        <button class="btn" onclick="startGame()">START GAME</button>
+        <button class="btn" onclick="newCard()">NEW CARD</button>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
