--- a/section 3/blackjackGame/index.html
+++ b/section 3/blackjackGame/index.html
@@ -16,6 +16,7 @@
         <button class="btn" onclick="startGame()">START GAME</button>
         <button class="btn" onclick="newCard()">NEW CARD</button>
     </div>
+    <p id="player-el"></p>
     <script src="app.js"></script>
 </body>
 </html>
