Completed BlackJack game!

--- a/section 3/blackjackGame/index.html
+++ b/section 3/blackjackGame/index.html
@@ -17,6 +17,7 @@
         <button class="btn" onclick="newCard()">NEW CARD</button>
     </div>
     <p id="player-el"></p>
+    <div class="newGame-container"><button class="btn" onclick="newGame()">NEW GAME</button></div>
     <script src="app.js"></script>
 </body>
 </html>
